--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_vector_icons: ^2.0.0
+  image_picker: ^0.8.7+1
   get: ^4.6.5
   curved_navigation_bar: ^1.0.3
 
